// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> by default matches with snapshot 1`] = `
<p
  className="sc-bdVaJa cTTYZt k-Paragraph--primary k-Paragraph--margin"
>
  Lorem ipsum dolor sit amet…
</p>
`;

exports[`<Paragraph /> with margin matches with snapshot 1`] = `
<p
  className="sc-bdVaJa cTTYZt k-Paragraph--primary k-Paragraph--margin"
/>
`;

exports[`<Paragraph /> with modifier matches with snapshot 1`] = `
<p
  className="sc-bdVaJa cTTYZt k-Paragraph--primary k-Paragraph--margin"
/>
`;

exports[`<Paragraph /> without italic matches with snapshot 1`] = `
<p
  className="sc-bdVaJa cTTYZt k-Paragraph--primary k-Paragraph--margin"
/>
`;

exports[`<Paragraph /> without normal line height matches with snapshot 1`] = `
<p
  className="sc-bdVaJa cTTYZt k-Paragraph--primary k-Paragraph--margin"
/>
`;
